--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -5,7 +5,7 @@
         <div id="user">
             <div id="title">LocationChecker</div>
             <div id="photo-space">
-                <img src="https://i0.wp.com/www.maquinas-de-afeitar.com/wp-content/uploads/barba.jpg?resizeu003d250%2C250" alt="">
+                <img src="/upload/user_pic/avatar.jpg" alt="">
             </div>
             <div id="name-space" *ngFor="let user of users">
                 Aurelio
@@ -26,7 +26,7 @@
     <div id="list-content">
         <a href="#">
             <div id="img">
-                <img src="https://i0.wp.com/www.maquinas-de-afeitar.com/wp-content/uploads/barba.jpg?resizeu003d250%2C250" alt="">
+                <img src="/upload/user_pic/avatar.jpg" alt="">
             </div>
             <div class="text">
                 <span>Jorge Elizalde Salmerón</span>
@@ -35,7 +35,7 @@
         </a>
         <a href="#">
             <div id="img">
-                <img src="https://i0.wp.com/www.maquinas-de-afeitar.com/wp-content/uploads/barba.jpg?resizeu003d250%2C250" alt="">
+                <img src="/upload/user_pic/avatar.jpg" alt="">
             </div>
             <div class="text">
                 <span>Marco Antonio Mendoza</span>
@@ -44,7 +44,7 @@
         </a>
         <a href="#">
             <div id="img">
-                <img src="https://i0.wp.com/www.maquinas-de-afeitar.com/wp-content/uploads/barba.jpg?resizeu003d250%2C250" alt="">
+                <img src="/upload/user_pic/avatar.jpg" alt="">
             </div>
             <div class="text">
                 <span>Jose Carlos Jimenez Bentura</span>
@@ -53,7 +53,7 @@
         </a>
         <a href="#">
             <div id="img">
-                <img src="https://i0.wp.com/www.maquinas-de-afeitar.com/wp-content/uploads/barba.jpg?resizeu003d250%2C250" alt="">
+                <img src="/upload/user_pic/avatar.jpg" alt="">
             </div>
             <div class="text">
                 <span>Kevin Noe Salinas De LA</span>
@@ -62,7 +62,7 @@
         </a>
         <a href="#">
             <div id="img">
-                <img src="https://i0.wp.com/www.maquinas-de-afeitar.com/wp-content/uploads/barba.jpg?resizeu003d250%2C250" alt="">
+                <img src="/upload/user_pic/avatar.jpg" alt="">
             </div>
             <div class="text">
                 <span>Jorge Elizalde Salmerón</span>
@@ -71,7 +71,7 @@
         </a>
         <a href="#">
             <div id="img">
-                <img src="https://i0.wp.com/www.maquinas-de-afeitar.com/wp-content/uploads/barba.jpg?resizeu003d250%2C250" alt="">
+                <img src="/upload/user_pic/avatar.jpg" alt="">
             </div>
             <div class="text">
                 <span>Jorge Elizalde Salmerón</span>
@@ -80,7 +80,7 @@
         </a>
         <a href="#">
             <div id="img">
-                <img src="https://i0.wp.com/www.maquinas-de-afeitar.com/wp-content/uploads/barba.jpg?resizeu003d250%2C250" alt="">
+                <img src="/upload/user_pic/avatar.jpg" alt="">
             </div>
             <div class="text">
                 <span>Jorge Elizalde Salmerón</span>
@@ -89,7 +89,7 @@
         </a>
         <a href="#">
             <div id="img">
-                <img src="https://i0.wp.com/www.maquinas-de-afeitar.com/wp-content/uploads/barba.jpg?resizeu003d250%2C250" alt="">
+                <img src="/upload/user_pic/avatar.jpg" alt="">
             </div>
             <div class="text">
                 <span>Jorge Elizalde Salmerón</span>
@@ -98,7 +98,7 @@
         </a>
         <a href="#">
             <div id="img">
-                <img src="https://i0.wp.com/www.maquinas-de-afeitar.com/wp-content/uploads/barba.jpg?resizeu003d250%2C250" alt="">
+                <img src="/upload/user_pic/avatar.jpg" alt="">
             </div>
             <div class="text">
                 <span>Jorge Elizalde Salmerón</span>
@@ -107,7 +107,7 @@
         </a>
         <a href="#">
             <div id="img">
-                <img src="https://i0.wp.com/www.maquinas-de-afeitar.com/wp-content/uploads/barba.jpg?resizeu003d250%2C250" alt="">
+                <img src="/upload/user_pic/avatar.jpg" alt="">
             </div>
             <div class="text">
                 <span>Jorge Elizalde Salmerón</span>
@@ -116,7 +116,7 @@
         </a>
         <a href="#">
             <div id="img">
-                <img src="https://i0.wp.com/www.maquinas-de-afeitar.com/wp-content/uploads/barba.jpg?resizeu003d250%2C250" alt="">
+                <img src="/upload/user_pic/avatar.jpg" alt="">
             </div>
             <div class="text">
                 <span>Jorge Elizalde Salmerón</span>
