--- a/app/views/partials/actions.hbs
+++ b/app/views/partials/actions.hbs
@@ -1,4 +1,17 @@
 <link rel="stylesheet" href="/css/actions.css">
+
+<div id="Photo_panel">
+    <div class="image-editor">
+        <!--<button class="closeA">x</button>-->
+        <input id="CCI" type="file" name="archivo" class="cropit-image-input" />
+        <div id="fot" class="cropit-preview"></div>
+        <button id="CI">Seleccionar Imagen</button>
+        <input type="range" class="cropit-image-zoom-input" />
+        <input id="IMG" type="hidden" name="image" />
+        <button id="send-photo">LISTO</button>
+    </div>
+</div>
+
 <section id="actions">
     {{! panel para registrar usuario }}
     <section id="regUP">
