--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,9 +59,36 @@ header {
 
 #user #photo-space {
     text-align: center;
+    position: relative;
+}
+
+#user #photo-space button {
+    top: 0px;
+    left: 50%;
+    opacity: 0;
+    width: 90px;
+    height: 90px;
+    outline: none;
+    cursor: pointer;
+    border: solid 0px;
+    position: absolute;
+    border-radius: 30px 30px;
+    transform: translateX(-50%);
+    transition: all linear 0.2s;
+    background: rgba(11, 11, 11, 0.6);
+}
+
+#user #photo-space button:hover {
+    opacity: 1;
+}
+
+#user #photo-space button img {
+    width: 70%;
+    opacity: 0.7;
 }
 
 #user #photo_user {
+    width: 90px;
     height: 90px;
     border-radius: 30px 30px;
     box-shadow: 5px 5px 20px 3px rgba(62, 35, 109, 1);
@@ -178,6 +205,7 @@ header #menu button.active::after {
     border-radius: 2px 2px;
     background: transparent;
     border: solid 1px rgb(171, 168, 190);
+    box-shadow: 0px 0px 50px 0px rgba(80, 75, 148, 0.6);
 }
 
 #finderEmpleados::before {
