--- a/app/views/partials/actions.hbs
+++ b/app/views/partials/actions.hbs
@@ -59,8 +59,10 @@
                                 <div class="cart--content">
                                     <div class="item">{{horaI}} - {{horaF}}</div>
                                     <div class="item">
-                                        <select name="{{../nombre}}_{{horaI}}-{{horaF}}" id="">
+                                        <select class="horario" name="{{../nombre}}_{{horaI}}-{{horaF}}" id="">
                                             <option value="">Edificio</option>
+                                            <option value="I">I</option>
+                                            <option value="A">A</option>
                                         </select>
                                     </div>
                                 </div>
