--- a/app/views/layouts/main.hbs
+++ b/app/views/layouts/main.hbs
@@ -20,6 +20,6 @@
   </body>
   <script src="/js/map.js"></script>
   <script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7B7SuMxuhVlpsFDh8FjOtehozOrnCtn4&callback=initMap">
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7B7SuMxuhVlpsFDh8FjOtehozOrnCtn4&libraries=drawing&callback=initMap">
   </script>
 </html>
