--- a/public/css/actions.css
+++ b/public/css/actions.css
@@ -93,13 +93,22 @@ input[type="range"]::-ms-thumb {
 
 #actions {
     top: 0px;
-    right: 0px;
+    left: 220px;
     height: 100%;
     z-index: 600;
     display: none;
     position: absolute;
     width: calc(100% - 220px);
     background: rgba(102, 51, 153, 0.3);
+}
+
+.actionsEdif {
+    width: 290px !important;
+    background: transparent !important;
+}
+
+.actionsEdif .header {
+    box-shadow: 0px 0px 300px 100px rgba(54, 51, 99, 0.4);
 }
 
 #actions > section {
