--- a/app/views/layouts/main.hbs
+++ b/app/views/layouts/main.hbs
@@ -18,6 +18,9 @@
 
 
   </body>
+  <div id="json" style="display: none;">
+    {{EdificiosStr}}
+  </div>
   <script src="/js/map.js"></script>
   <script async defer
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7B7SuMxuhVlpsFDh8FjOtehozOrnCtn4&libraries=drawing&callback=initMap">
