--- a/app/views/partials/actions.hbs
+++ b/app/views/partials/actions.hbs
@@ -61,8 +61,9 @@
                                     <div class="item">
                                         <select class="horario" name="{{../nombre}}_{{horaI}}-{{horaF}}" id="">
                                             <option value="">Edificio</option>
-                                            <option value="I">I</option>
-                                            <option value="A">A</option>
+                                            {{#each ../../Edificios}}
+                                                <option value="{{id}}">{{nombre}}</option>
+                                            {{/each}}
                                         </select>
                                     </div>
                                 </div>
