--- a/public/css/actions.css
+++ b/public/css/actions.css
@@ -103,12 +103,24 @@ input[type="range"]::-ms-thumb {
 }
 
 .actionsEdif {
+    height: auto !important;
     width: 290px !important;
     background: transparent !important;
 }
 
 .actionsEdif .header {
+    position: fixed !important;
     box-shadow: 0px 0px 300px 100px rgba(54, 51, 99, 0.4);
+}
+
+.actionsEdif .actions--space {
+    height: auto !important;
+    overflow-y: auto; 
+    overflow-x: hidden;
+    position: absolute;
+    text-align: center;
+    background: transparent;
+    width: calc(100% - 50px);
 }
 
 #actions > section {
