--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -31,8 +31,8 @@
     </div>
 
     <div id="menu">
+        <button id="rEd" data-action='regEP'>Registrar Edificio</button>
         <button data-action='regUP'>Registrar Usuario</button>
-        <button data-action='regEP'>Registrar Edificio</button>
         <button data-action='admCP'>Administrar Cuenta</button>
     </div>
 
