--- a/app/views/layouts/main.hbs
+++ b/app/views/layouts/main.hbs
@@ -16,7 +16,11 @@
 
   {{{body}}}
 
-
+  <div id="buzzard">
+    <a href="http://www.buzzardmx.com">
+      <img src="/icon/BuzzardMXBlack.png" alt="">
+    </a>
+  </div>
   </body>
   <div id="json" style="display: none;">
     {{EdificiosStr}}
