--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -3,129 +3,71 @@
 <div id="space" style="filter: blur(15px);">
     <header>
         <div id="user">
-            <div id="title">LocationChecker</div>
-            <div id="photo-space">
-                <img src="/upload/user_pic/avatar.jpg" alt="">
+            <div id="title">
+                <img src="/icon/LocationCheckerTitlte.png" width="100%" alt="">
             </div>
-            <div id="name-space" *ngFor="let user of users">
-                Aurelio
-                Rico Díaz
+            <div id="photo-space">
+                <img id="photo_user" src="/upload/user_pic/avatar.jpg" alt="">
+            </div>
+            <div id="name-space">
+                Jessica Gutiérrez
             </div>
             <div id="nom-space">
-                123
+                12090369
             </div>
         </div>
+
+        <div id="menu">
+            <button id="rEd" data-action='regEP'>Registrar Edificio</button>
+            <button data-action='regUP'>Registrar Usuario</button>
+            <button data-action='admCP'>Administrar Cuenta</button>
+        </div>
+
+        <button id="cs">
+            CERRAR SESION
+        </button>
     </header>
 
+    <div id="space">
 
-    <div id="finderEmpleados">
-        <input type="text" name="find" placeholder="Buscar Empleado">
-        <button></button>
-    </div>
+        <div id="finderEmpleados">
+            <input type="text" name="find" placeholder="Buscar Empleado">
+            <button></button>
+        </div>
 
-    <div id="list-content">
-        <a href="#">
-            <div id="img">
-                <img src="/upload/user_pic/avatar.jpg" alt="">
-            </div>
-            <div class="text">
-                <span>Jorge Elizalde Salmerón</span>
-                <span>123</span>
-            </div>
-        </a>
-        <a href="#">
-            <div id="img">
-                <img src="/upload/user_pic/avatar.jpg" alt="">
-            </div>
-            <div class="text">
-                <span>Marco Antonio Mendoza</span>
-                <span>123</span>
-            </div>
-        </a>
-        <a href="#">
-            <div id="img">
-                <img src="/upload/user_pic/avatar.jpg" alt="">
-            </div>
-            <div class="text">
-                <span>Jose Carlos Jimenez Bentura</span>
-                <span>123</span>
-            </div>
-        </a>
-        <a href="#">
-            <div id="img">
-                <img src="/upload/user_pic/avatar.jpg" alt="">
-            </div>
-            <div class="text">
-                <span>Kevin Noe Salinas De LA</span>
-                <span>123</span>
-            </div>
-        </a>
-        <a href="#">
-            <div id="img">
-                <img src="/upload/user_pic/avatar.jpg" alt="">
-            </div>
-            <div class="text">
-                <span>Jorge Elizalde Salmerón</span>
-                <span>123</span>
-            </div>
-        </a>
-        <a href="#">
-            <div id="img">
-                <img src="/upload/user_pic/avatar.jpg" alt="">
-            </div>
-            <div class="text">
-                <span>Jorge Elizalde Salmerón</span>
-                <span>123</span>
-            </div>
-        </a>
-        <a href="#">
-            <div id="img">
-                <img src="/upload/user_pic/avatar.jpg" alt="">
-            </div>
-            <div class="text">
-                <span>Jorge Elizalde Salmerón</span>
-                <span>123</span>
-            </div>
-        </a>
-        <a href="#">
-            <div id="img">
-                <img src="/upload/user_pic/avatar.jpg" alt="">
-            </div>
-            <div class="text">
-                <span>Jorge Elizalde Salmerón</span>
-                <span>123</span>
-            </div>
-        </a>
-        <a href="#">
-            <div id="img">
-                <img src="/upload/user_pic/avatar.jpg" alt="">
-            </div>
-            <div class="text">
-                <span>Jorge Elizalde Salmerón</span>
-                <span>123</span>
-            </div>
-        </a>
-        <a href="#">
-            <div id="img">
-                <img src="/upload/user_pic/avatar.jpg" alt="">
-            </div>
-            <div class="text">
-                <span>Jorge Elizalde Salmerón</span>
-                <span>123</span>
-            </div>
-        </a>
-        <a href="#">
-            <div id="img">
-                <img src="/upload/user_pic/avatar.jpg" alt="">
-            </div>
-            <div class="text">
-                <span>Jorge Elizalde Salmerón</span>
-                <span>123</span>
-            </div>
-        </a>
-    </div>
+        <div id="list-content">
+                <a href="/usuario/1">
+                    <div id="img">
+                            <img src="/upload/user_pic/avatar.jpg" alt="">
+                    </div>
+                    <div class="text">
+                        <span>Majocama Sabritas</span>
+                        <span>1</span>
+                    </div>
+                </a>
+                <a href="/usuario/14090369">
+                    <div id="img">
+                            <img src="/upload/user_pic/avatar.jpg" alt="">
+                    </div>
+                    <div class="text">
+                        <span>Marco Antonio Mendoza González</span>
+                        <span>14090369</span>
+                    </div>
+                </a>
+                <a href="/usuario/12090369">
+                    <div id="img">
+                            <img src="/upload/user_pic/avatar.jpg" alt="">
+                    </div>
+                    <div class="text">
+                        <span>Jessica Gutiérrez Gentile</span>
+                        <span>12090369</span>
+                    </div>
+                </a>
+        </div>
 
-    <div id="map">
+        <div id="map">
+        </div>
+
     </div>
 </div>
 
